--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
     "svix": "^1.76.0"
   },
   "devDependencies": {
