--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
+    "stripe": "^18.5.0",
     "svix": "^1.76.0"
   },
   "devDependencies": {
